--- a/src/locales/ru/lang.json
+++ b/src/locales/ru/lang.json
@@ -3,11 +3,19 @@
     "rules": "Правила",
     "donations": "Донаты",
     "forPlayers": "Игрокам",
+    "news": "Новости",
     "map": "Карта",
     "features": "Возможности",
 
     "joinNplay": "Заходи и играй!",
     "apply": "Подать заявку",
+
+    "modal_name":"Ваше имя",
+    "modal_age":"Ваш возраст",
+    "modal_telegram":"Ваш телеграм",
+    "modal_link":"Ссылка на другую соц. сеть (не почта!)",
+    "modal_referal":"Реферал (если вас пригласили)",
+    "modal_nickname":"Ваш никнейм",
 
     "promo": "Приватный Майнкрафт сервер",
     "promo_desc": "Ванильный сервер, где вы можете развиваться вместе с другими игроками, строить города, укреплять внутреннюю экономику и даже создавать свое государство!",
@@ -29,5 +37,41 @@
     "desc_nims": "Добрый админ",
     "desc_frammy": "Злой админ",
     
+    "lvTime": "",
+    "year1": " год назад",
+    "year2": " года назад",
+    "year&1": " год назад",
+    "year&2": " года назад",
+    "years": " лет назад",
+    
+    "month1": " месяц назад",
+    "month2": " месяца назад",
+    "month&1": " месяц назад",
+    "month&2": " месяца назад",
+    "months": " месяцев назад",
+
+    "week1": " неделю назад",
+    "week2": " недели назад",
+    "week&1": " неделю назад",
+    "week&2": " недели назад",
+    "weeks": " недель назад",
+
+    "day1": " день назад",
+    "day2": " дня назад",
+    "day&1": " день назад",
+    "day&2": " дня назад",
+    "days": " дней назад",
+
+    "hour1": " час назад",
+    "hour2": " часа назад",
+    "hour&1": " час назад",
+    "hour&2": " часа назад",
+    "hours": " часов назад",
+
+    "minute1": " минуту назад",
+    "minute2": " минуты назад",
+    "minute&1": " минуту назад",
+    "minute&2": " минуты назад",
+    "minutes": " минут назад",
     "loading": "Загрузка..."
 }
