--- a/src/locales/ru/lang.json
+++ b/src/locales/ru/lang.json
@@ -7,7 +7,7 @@
     "map": "Карта",
     "features": "Возможности",
 
-    "joinNplay": "Заходи и играй!",
+    "joinNplay": "Запуск уже 9 марта💫",
     "apply": "Подать заявку",
 
     "modal_name":"Ваше имя",
@@ -32,10 +32,14 @@
     "money_title": "Бесплатно и без лицензии",
     "money_desc": "Не важно, каким лаунчером пользуешься. Присоединяйся к игре с лицензией или без.",
 
+    "villagers": "Жители",
+
     "rank_nims": "Тех. админ",
     "rank_frammy": "Организация, маркетинг",
     "desc_nims": "Добрый админ",
     "desc_frammy": "Злой админ",
+    "rank_doritos": "Креативный директор",
+    "desc_doritos": "Маленьнкий админ",
     
     "lvTime": "",
     "year1": " год назад",
@@ -73,5 +77,8 @@
     "minute&1": " минуту назад",
     "minute&2": " минуты назад",
     "minutes": " минут назад",
+
+    
+
     "loading": "Загрузка..."
 }
