--- a/src/locales/ru/lang.json
+++ b/src/locales/ru/lang.json
@@ -7,15 +7,18 @@
     "map": "Карта",
     "features": "Возможности",
 
-    "joinNplay": "Запуск уже 9 марта💫",
+    "joinNplay": "💫 Мы уже играем! А вы? 💫",
     "apply": "Подать заявку",
 
     "modal_name":"Ваше имя",
     "modal_age":"Ваш возраст",
     "modal_telegram":"Ваш телеграм",
     "modal_link":"Ссылка на другую соц. сеть (не почта!)",
-    "modal_referal":"Реферал (если вас пригласили)",
+    "modal_referal":"Реферал (или где о нас узнали)",
     "modal_nickname":"Ваш никнейм",
+    "modal_about":"Напишите о себе",
+    "submit":"Отправить",
+    "cancel":"Отмена",
 
     "promo": "Приватный Майнкрафт сервер",
     "promo_desc": "Ванильный сервер, где вы можете развиваться вместе с другими игроками, строить города, укреплять внутреннюю экономику и даже создавать свое государство!",
@@ -32,6 +35,7 @@
     "money_title": "Бесплатно и без лицензии",
     "money_desc": "Не важно, каким лаунчером пользуешься. Присоединяйся к игре с лицензией или без.",
 
+    "mayor": "Глава",
     "villagers": "Жители",
 
     "rank_nims": "Тех. админ",
@@ -78,7 +82,11 @@
     "minute&2": " минуты назад",
     "minutes": " минут назад",
 
-    
+    "timer-Days": "дней",
+    "timer-Hours": "часов",
+    "timer-Mins": "минут",
+    "timer-Seconds": "секунд",
+    "tillStart": "До старта сервера: ",
 
     "loading": "Загрузка..."
 }
